# linux_programming_interface

./: .cproject  .project  CMakeLists.txt  README.md
chp-03/: CMakeLists.txt  error_function_test.cpp  get_number_test.cpp  glibc_version.c  syscall.c
chp-04/: CMakeLists.txt  copy.cpp  cpholes.cpp  seek_io.cpp  tee.cpp
chp-04/signal_io/: client.cpp  server.cpp
chp-05/: CMakeLists.txt  large_file.cpp  readv.cpp  vector_fileio.cpp
chp-06/: CMakeLists.txt  display_env.cpp  longjump.cpp  mem_segments.cpp
chp-07/: CMakeLists.txt  free_and_sbrk.cpp
chp-08/: CMakeLists.txt  check_password.cpp  t_getpwent.cpp  t_getpwnam_r.cpp
chp-09/: CMakeLists.txt  idshow.cpp
chp-11/: CMakeLists.txt  t_fpathconf.cpp  t_sysconf.cpp
chp-12/: CMakeLists.txt  procfs_pidmax.cpp  t_uname.cpp
chp-13/: CMakeLists.txt  direct_read.cpp
chp-15/: CMakeLists.txt  t_stat.cpp  t_umask.cpp  t_utime.cpp
chp-16/: CMakeLists.txt  get_setxattr.cpp
chp-18/: CMakeLists.txt
lib/: CMakeLists.txt  build_name.sh  ename.inc.h  error_functions.cpp  error_functions.h  file_perms.cpp  file_perms.h  get_num.h  get_number.cpp  linux_header.h  ugid_functions.cpp  ugid_functions.h
